--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ponder/core": "^0.7.16",
     "abitype": "^0.10.2",
     "hono": "^4.5.0",
+    "thirdweb": "^5.74.0",
     "viem": "^2.21.3"
   },
   "devDependencies": {
